# CatsEyeGuard

./: .copier-answers.yml  .pre-commit-config.yaml  .renovaterc.json  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  delete-untagged-packages.yml  devcontainer.yml  readthedocs-preview.yml  release.yml  renovate.yml  semantic-release.yml
docs/: conf.py  index.md
docs/advanced/: dev-containers.md
docs/api/: settings.md
docs/cli/: index.md
docs/development/: git-workflow.md  tests.md
docs/management/: init.md  release.md  settings.md
src/: requirements.txt
src/catseyeguard/: cli.py  main.py  motion_detector.py  settings.py  video_monitor.py
tests/: cli_test.py  pkg_test.py  settings_test.py
